--- a/.gitignore
+++ b/.gitignore
@@ -121,4 +121,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# remove .idea
+.idea
+
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,macos,java,vim
