--- a/server/pom.xml
+++ b/server/pom.xml
@@ -93,7 +93,7 @@
                 <configuration>
                     <fork>true</fork>
                     <!-- Replace "zoo" by actual package name in next line! -->
-                    <mainClass>splendor.RestLauncher</mainClass>
+                    <mainClass>splendor.controller.RestLauncher</mainClass>
                 </configuration>
                 <executions>
                     <execution>
