--- a/server/pom.xml
+++ b/server/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.3.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.13</version>
+        </dependency>
     </dependencies>
 
     <build>
