--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,6 @@ $RECYCLE.BIN/
 __pycache__
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,macos,java,vim
+
+# javadoc
+server/doc
