--- a/.gitignore
+++ b/.gitignore
@@ -133,4 +133,4 @@ __pycache__
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,macos,java,vim
 
 # javadoc
-server/doc
+server/docs
