--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,8 +27,9 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+        working-directory: ./server
     - name: Build with Maven
-      run: mvn -B package --file /server/pom.xml
+      run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
