--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,8 +27,10 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-        working-directory: ./server
+        
     - name: Build with Maven
+      with:
+        working-directory: ./server
       run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
