--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,14 +27,11 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-
-    - name: Build with Maven
-      uses: maven/setup-maven@v1
-      with:
-        working-directory: ./server
-    - run: mvn clean install
         
     - name: Build with Maven
+    - uses: actions/checkout@v3
+        with:
+            working-directory: ./server
       run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
