--- a/server/pom.xml
+++ b/server/pom.xml
@@ -85,11 +85,18 @@
             <version>2.19.0</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>2.19.0</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>eu.kartoffelquadrat</groupId>
+            <artifactId>asyncrestlib</artifactId>
+            <version>1.6.2</version>
         </dependency>
     </dependencies>
 
