all containers successfully running!!

--- a/Dockerfile-server
+++ b/Dockerfile-server
@@ -1,7 +1,7 @@
 FROM maven:3.6-jdk-13 AS splendor-server-build
-ADD target/SplendorServer.jar SplendorServer.jar
-COPY src /usr/src/app/src
-COPY pom.xml /usr/src/app
+ADD server/target/SplendorServer.jar SplendorServer.jar
+COPY server/src /usr/src/app/src
+COPY server/pom.xml /usr/src/app
 RUN mvn -f /usr/src/app/pom.xml clean install
 
 FROM openjdk:8-jdk-alpine
