--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8000
-lobbyservice.location=http://localhost:4242
+lobbyservice.location=http://lobby:4242
 cards.json.location=src/main/resources/cards.json
 gameservice.display.name=Splendor
 gameservice.name=splendor
 # Replace the next line with your local ip
-gameservice.location=http://10.121.80.215:${server.port}
+gameservice.location=http://server:${server.port}
 gameservice.oauth2.name=splendor
 gameservice.oauth2.password=abc123_ABC123
 gameservice.min.players=2
