--- a/Dockerfile-server
+++ b/Dockerfile-server
@@ -2,10 +2,12 @@ FROM maven:3.6-jdk-13 AS splendor-server-build
 ADD server/target/SplendorServer.jar SplendorServer.jar
 COPY server/src /usr/src/app/src
 COPY server/pom.xml /usr/src/app
-RUN mvn -f /usr/src/app/pom.xml clean install
+RUN mvn -f /usr/src/app/pom.xml clean package -P prod
 
 FROM openjdk:8-jdk-alpine
-COPY --from=splendor-server-build /usr/src/app/target/SplendorServer.jar SplendorServer.jar
+COPY --from=splendor-server-build /usr/src/app/target/SplendorServer.jar /usr/src/app/SplendorServer.jar
+
+WORKDIR /usr/src/app
 
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","SplendorServer.jar"]
