--- a/Dockerfile-server
+++ b/Dockerfile-server
@@ -4,7 +4,7 @@ COPY server/src /usr/src/app/src
 COPY server/pom.xml /usr/src/app
 RUN mvn -f /usr/src/app/pom.xml clean package -P prod
 
-## Wait for SQL to be ready
+## Wait for LS to be ready
 ENV WAIT_VERSION 2.7.2
 ADD https://github.com/ufoscout/docker-compose-wait/releases/download/$WAIT_VERSION/wait /wait
 RUN chmod +x /wait
