--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile-server
+      args:
+        SAVED_GAMES_PATH: /usr/src/app/saved_games
     ports:
       - "8000:8000"
     depends_on:
@@ -37,4 +39,9 @@ services:
       - WAIT_HOSTS_TIMEOUT=300
       - WAIT_SLEEP_INTERVAL=5
       - WAIT_HOST_CONNECT_TIMEOUT=5
+      - SAVED_GAMES_PATH=/usr/src/app/saved_games
+    volumes:
+      - saved_games:/usr/src/app/saved_games
 version: '3.8'
+volumes:
+  saved_games:
