--- a/server/src/main/resources/application-dev.properties
+++ b/server/src/main/resources/application-dev.properties
@@ -1,9 +1,10 @@
 server.port=8000
-lobbyservice.location=http://${lobby.ip}:4242
+lobbyservice.location=http://localhost:4242
 gameservice.display.name=Splendor
 gameservice.name=splendor
+savegame.location=savegames
 # Replace the next line with your local ip
-gameservice.location=http://server:${server.port}
+gameservice.location=http://192.168.0.126:${server.port}
 gameservice.oauth2.name=splendor
 gameservice.oauth2.password=abc123_ABC123
 gameservice.min.players=2
