--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/linux,windows,macos,java,vim
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,windows,macos,java,vim
 
+# Saved games
+savegames/
+
 ### Java ###
 # Compiled class file
 *.class
