--- a/server/src/main/resources/application-prod.properties
+++ b/server/src/main/resources/application-prod.properties
@@ -2,6 +2,7 @@ server.port=8000
 lobbyservice.location=http://lobby:4242
 gameservice.display.name=Splendor
 gameservice.name=splendor
+savegame.location=${SAVED_GAMES_PATH}
 # Replace the next line with your local ip
 gameservice.location=http://server:${server.port}
 gameservice.oauth2.name=splendor
