--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 server.port=8000
-lobbyservice.location=http://lobby:4242
+spring.profiles.active=@activatedProperties@
+# for local
+#lobbyservice.location=http://localhost:4242
+#gameservice.location=http://localhost:${server.port}
+#savegame.location=savegames
+# for docker
+#lobbyservice.location=http://lobby:4242
+#gameservice.location=http://server:${server.port}
+#savegame.location=/usr/src/app/saved_games
 gameservice.display.name=Splendor
 gameservice.name=splendor
-# Replace the next line with your local ip
-gameservice.location=http://server:${server.port}
 gameservice.oauth2.name=splendor
 gameservice.oauth2.password=abc123_ABC123
 gameservice.min.players=2
