--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,8 @@ server/target
 
 # splendor.iml
 server/splendor.iml
+client/config/config.py
+server/src/main/resources/application-dev.properties
 
 # IDE
 server/.*
